--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -17,6 +17,10 @@
   border: 1px solid rgba(255, 255, 255, 0.18);
   position: fixed;
   z-index: 2;
+
+  @media screen and (max-width: 600px) {
+    padding: 0 1rem;
+  }
 }
 
 .app__navbar.active {
