--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -19,6 +19,7 @@
   height: -webkit-calc(100vh - 80px);
   height: calc(100vh - 80px);
   opacity: 0;
+  transform: scale(1.1);
   transform: translateX(-20%);
   transition: all 0.5s ease;
 }
@@ -43,6 +44,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  z-index: -1;
 }
 
 .current {
@@ -57,61 +59,71 @@
 .content {
   position: absolute;
   font-size: 20px;
-  top: 70%;
+  top: 20%;
   opacity: 0;
   width: 80%;
   color: #fff;
-  padding: 3rem;
+  padding: 0 3rem;
   text-align: center;
   // background: rgba(0, 0, 0, 0.3);
-  animation: slide-up 1s ease 0.5s;
-  animation-delay: 0.5s;
-  animation-fill-mode: forwards;
-  visibility: hidden;
+  // animation: slide-up 1s ease 0.5s;
+  // animation-delay: 0.5s;
+  // animation-fill-mode: forwards;
+  // visibility: hidden;
 }
 
-@keyframes slide-up {
-  0% {
-    visibility: visible;
-    top: 25%;
-  }
-  100% {
-    opacity: 1;
-    visibility: visible;
-    top: 15%;
-  }
-}
+// @keyframes slide-up {
+//   0% {
+//     visibility: visible;
+//     top: 25%;
+//   }
+//   100% {
+//     opacity: 1;
+//     visibility: visible;
+//     top: 15%;
+//   }
+// }
 
 .content > * {
   color: #fff;
   margin-bottom: 1rem;
 }
 
-.current .content {
-  opacity: 1;
-  transform: translateX(0);
-  transition: all 0.5s ease;
+.slide-desc {
+  width: 70%;
+  margin: 0 auto;
+}
+
+// .current .content {
+//   opacity: 1;
+//   transform: translateX(0);
+//   transition: all 0.5s ease;
+// }
+
+.slide-link {
+  text-decoration: none !important;
 }
 
 .btn-container {
   position: relative;
   width: fit-content;
   cursor: pointer;
-  pointer-events: auto;
   height: 36px;
   align-items: center;
   // padding: 0 5px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1rem;
+  opacity: 0;
+  z-index: 2;
 
-  span {
-    cursor: pointer;
-    pointer-events: auto;
-  }
-
+  // span {
+  //   cursor: pointer;
+  //   pointer-events: auto;
+  // }
   &:hover {
     .circle-btn {
       width: 100%;
-      border-radius: 18px;
       transition: all 0.5s ease;
     }
   }
@@ -119,21 +131,34 @@
 
 .circle-btn {
   position: absolute;
-  top: 50%;
+  top: 0;
   left: 0;
-  transform: translateY(-50%);
+  // transform: translateY(-50%);
+  transform: scale(0);
   border: 1px solid #fff;
   border-radius: 18px;
   width: 36px;
   height: 36px;
 }
 
-.arrow-btn {
+.arrow-btn-container {
   position: absolute;
-  top: 50%;
+  top: 0;
   left: 24px;
-  transform: translateY(-50%);
+  // transform: translateY(-50%);
+  display: flex;
   height: 36px;
+  width: fit-content;
+  align-items: center;
+}
+
+.arrow-btn {
+  position: relative;
+  // position: absolute;
+  // top: 50%;
+  // left: 24px;
+  // transform: translateY(-50%);
+  // height: 36px;
   line-height: 36px;
   font-size: 25px;
   color: #fff;
@@ -159,16 +184,29 @@
   // width: 3rem;
   // border-radius: 50%;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
+  &:hover {
+    transform: scale(1.2);
+  }
 }
 // .arrow:hover {
 //   background-color: #fff;
 //   color: #777;
 // }
+// .btn-container:hover,
+// .circle-btn:hover,
+// .arrow-btn-container:hover,
+// .arrow-btn:hover,
+// .btn-text:hover {
+//   .circle-btn {
+//     width: 100%;
+//     transition: all 0.5s ease;
+//   }
+// }
 
-a {
-  text-decoration: none !important;
-}
+// a {
+//   text-decoration: none !important;
+// }
 
 .next {
   top: 50%;
@@ -182,8 +220,12 @@ a {
 @media screen and (max-width: 600px) {
   .content {
     width: 90%;
+    top: 15%;
     font-size: 16px;
     padding: 0.5rem 1rem 0 1rem;
+  }
+  .slide-desc {
+    width: 80%;
   }
   .slide-heading {
     font-size: 2.5rem;
