--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -14,10 +14,10 @@
   top: 80px;
   left: 0;
   width: 100%;
-  height: 100%;
-  height: -moz-calc(100vh - 80px);
-  height: -webkit-calc(100vh - 80px);
-  height: calc(100vh - 80px);
+  // height: 100%;
+  // height: -moz-calc(100vh - 80px);
+  // height: -webkit-calc(100vh - 80px);
+  // height: calc(100vh - 80px);
   opacity: 0;
   transform: scale(1.1);
   transform: translateX(-20%);
@@ -44,7 +44,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1;
+
+  // z-index: -1;
 }
 
 .current {
@@ -100,6 +101,13 @@
 //   transition: all 0.5s ease;
 // }
 
+// .slide.current {
+//   .btn-container {
+//     cursor: pointer !important;
+//     pointer-events: auto !important;
+//   }
+// }
+
 .slide-link {
   text-decoration: none !important;
 }
@@ -115,7 +123,8 @@
   margin-right: auto;
   margin-top: 1rem;
   opacity: 0;
-  z-index: 2;
+  // z-index: 1;
+  border-radius: 18px;
 
   // span {
   //   cursor: pointer;
@@ -138,6 +147,7 @@
   border: 1px solid #fff;
   border-radius: 18px;
   width: 36px;
+  // width: 100%;
   height: 36px;
 }
 
