--- a/src/container/Stories/Stories.scss
+++ b/src/container/Stories/Stories.scss
@@ -60,10 +60,23 @@
 
 .stories-item-icon {
   position: absolute;
-  top: 2px;
-  right: 2px;
+  top: 8px;
+  right: 4px;
   z-index: 2;
-  width: 42px;
+  font-size: 36px;
+  color: #fff;
+  // color: #3535ff;
+  // background: #fff;
+  background: #3535ff;
+  border-radius: 50%;
+  // width: 40px;
+  // background: red
+  // border-radius: 20px;
+
+  // box-sizing: border-box;
+  // -moz-box-sizing: border-box;
+  // -webkit-box-sizing: border-box;
+  // border: 1px solid #3535ff;
 }
 
 .stories-carousel {
@@ -73,6 +86,11 @@
   // background: #9bffff;
   // padding: 10px;
   // animation: slide 1s;
+}
+
+.carousel-wrap {
+  width: fit-content;
+  // overflow: visible;
 }
 
 .stories-inner-carousel {
@@ -100,3 +118,29 @@
 //     transform: translate(-500px, 0);
 //   }
 // }
+
+.stories-item:hover {
+  .stories-item-icon {
+    -moz-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+    -webkit-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+    box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+
+    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius=3,MakeShadow=true,ShadowOpacity=0.30);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Blur(PixelRadius=3,MakeShadow=true,ShadowOpacity=0.30)";
+    zoom: 1;
+    // transform: scale(1.2);
+    animation: animate-icon 5s;
+  }
+}
+
+@keyframes animate-icon {
+  0% {
+    transform: scale(1);
+  }
+  20% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
