--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -42,8 +42,8 @@
 
 .slide img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: 100vh;
+  // object-fit: cover;
 
   // z-index: -1;
 }
