--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -128,3 +128,10 @@
     margin: 1rem 0;
   }
 }
+
+#map {
+  height: 400px;
+  /* The height is 400 pixels */
+  width: 100%;
+  /* The width is the width of the web page */
+}
