--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -129,9 +129,25 @@
   }
 }
 
-#map {
-  height: 400px;
-  /* The height is 400 pixels */
+.footer-info {
   width: 100%;
-  /* The width is the width of the web page */
+  display: none;
+  margin-top: 5rem;
+
+  @media screen and (max-width: 500px) {
+    display: flex;
+    flex-direction: column;
+    font-size: 10px;
+    font-weight: 500;
+    div {
+      margin: 2px;
+    }
+    span {
+      margin: 2px;
+      font-size: 12px;
+    }
+    .peb-footer {
+      font-size: 12px;
+    }
+  }
 }
