--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -27,7 +27,7 @@
     padding: 1rem;
     border-radius: 10px;
     cursor: pointer;
-    background-color: #fef4f5;
+    background-color: #f2f7fb;
 
     transition: all 0.3s ease-in-out;
 
@@ -45,7 +45,7 @@
       font-weight: 500;
     }
     &:hover {
-      box-shadow: 0 0 25px #fef4f5;
+      box-shadow: 0 0 25px #f2f7fb;
     }
 
     @media screen and (max-width: 450px) {
@@ -58,13 +58,13 @@
   }
 }
 
-.app__footer-cards .app__footer-card:last-child {
-  background-color: #f2f7fb;
-}
+// .app__footer-cards .app__footer-card:last-child {
+//   background-color: #f2f7fb;
+// }
 
-.app__footer-cards .app__footer-card:last-child:hover {
-  box-shadow: 0 0 25px #f2f7fb;
-}
+// .app__footer-cards .app__footer-card:last-child:hover {
+//   box-shadow: 0 0 25px #f2f7fb;
+// }
 
 .app__footer-form {
   width: 60%;
@@ -103,7 +103,7 @@
     }
   }
 
-  button {
+  .footer-send {
     padding: 1rem 2rem;
     border-radius: 10px;
     border: none;
@@ -119,7 +119,8 @@
     cursor: pointer;
 
     &:hover {
-      background-color: #2430af;
+      background-color: #1b2281;
+      transform: scale(1.02);
     }
   }
 
